--- a/package.json
+++ b/package.json
@@ -6,11 +6,19 @@
   "author": "Joaquin Pedeuboy",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --exec ts-node src/index.ts"
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "test" : "jest --detectOpenHandles",
+    "test:coverage" : "npm run pretest && jest --detectOpenHandles --coverage",
+    "pretest": "ts-node ./src/data --clear"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/jest": "^30.0.0",
+    "@types/supertest": "^6.0.3",
+    "jest": "^30.2.0",
     "nodemon": "^3.1.10",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   },
